--- a/index.html
+++ b/index.html
@@ -6,6 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <style>
+        body {
+            background-color: black;
+        }
+
+        canvas {
+            background-color: white;
+        }
+    </style>
+
+
+    <canvas id="canvas" width="600px" height="600px"></canvas>
+
+    <script type="module" src="./main.js"></script>
 </body>
 </html>
